--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.23.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "next-sanity": "^7.0.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "sanity": "^3.23.4",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
