--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.11",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-kit": "^5.0.9",
     "@sanity/vision": "^3.23.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -21,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "sanity": "^3.23.4",
+    "sanity-plugin-iframe-pane": "^3.1.3",
     "styled-components": "^6.1.6",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
