--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/vision": "^3.23.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^10.17.12",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "next-sanity": "^7.0.7",
